# FinalProject

./: .gitmodules
Arcanoid/: CMakeLists.txt
Arcanoid/android-project/app/: build.gradle
Arcanoid/final/: CMakeLists.txt  game-object.hpp  game.cpp  game.hpp  main.cpp  resource-manager.cpp  resource-manager.hpp  sound-manager.cpp  sprite-renderer.cpp  sprite-renderer.hpp
Arcanoid/final/glad/: CMakeLists.txt
Arcanoid/final/glm/: common.hpp  fwd.hpp  geometric.hpp  integer.hpp  matrix.hpp
Arcanoid/final/imgui_pack/: CMakeLists.txt  imgui.h  imgui_impl_opengl2.cpp  imgui_impl_opengl2.h  imgui_impl_opengl3.cpp  imgui_impl_sdl3.cpp  imgui_impl_sdl3.h  imgui_impl_sdlrenderer3.cpp  imgui_impl_sdlrenderer3.h  imstb_textedit.h
final/: CMakeLists.txt  ImGui-renderer.cpp  audio-buffer.cpp  audio-buffer.hpp  ball-object.cpp  ball-object.hpp  game-level.cpp  game-level.hpp  game-object.cpp  game.cpp  game.hpp  imgui-shader.vs  main.cpp  patch.patch  resource-manager.cpp  resource-manager.hpp  shader.cpp  shader.hpp  sound-manager.hpp  sound-player.cpp  sound-player.hpp  sound.cpp  sound.hpp  sound_buffer.cpp  sound_buffer.hpp  sprite-renderer.hpp  stb_image.h  texture.cpp  texture.hpp
final/01-texture-engine/: ImGui-renderer.hpp  game.cpp  main.cpp  resource-manager.hpp
final/glm/: exponential.hpp  trigonometric.hpp
final/glm/detail/: _noise.hpp  _swizzle.hpp  _swizzle_func.hpp  _vectorize.hpp  compute_common.hpp  compute_vector_relational.hpp  glm.cpp  setup.hpp  type_mat2x2.hpp  type_mat2x3.hpp  type_mat2x4.hpp  type_mat3x3.hpp  type_mat3x4.hpp  type_mat4x2.hpp  type_vec3.hpp  type_vec4.hpp
final/glm/ext/: _matrix_vectorize.hpp  matrix_clip_space.hpp  matrix_common.hpp  matrix_int4x2_sized.hpp  matrix_int4x4_sized.hpp  matrix_projection.hpp  matrix_transform.hpp  matrix_uint2x3.hpp  matrix_uint2x4_sized.hpp  matrix_uint3x4_sized.hpp  matrix_uint4x2_sized.hpp  quaternion_geometric.hpp  quaternion_relational.hpp  quaternion_trigonometric.hpp  scalar_constants.hpp  scalar_int_sized.hpp  scalar_integer.hpp  scalar_reciprocal.hpp  scalar_relational.hpp  scalar_uint_sized.hpp  scalar_ulp.hpp  vector_common.hpp  vector_int1_sized.hpp  vector_int3_sized.hpp  vector_uint3_sized.hpp  vector_ulp.hpp
final/glm/gtc/: constants.hpp  integer.hpp  matrix_inverse.hpp  packing.hpp  type_aligned.hpp
final/glm/gtx/: associated_min_max.hpp  closest_point.hpp  color_encoding.hpp  color_space.hpp  color_space_YCoCg.hpp  common.hpp  component_wise.hpp  dual_quaternion.hpp  easing.hpp  euler_angles.hpp  exterior_product.hpp  fast_square_root.hpp  fast_trigonometry.hpp  functions.hpp  gradient_paint.hpp  handed_coordinate_space.hpp  hash.hpp  io.hpp  matrix_cross_product.hpp  matrix_interpolation.hpp  matrix_major_storage.hpp  matrix_transform_2d.hpp  norm.hpp  projection.hpp  range.hpp  rotate_normalized_axis.hpp  rotate_vector.hpp  scalar_multiplication.hpp  std_based_type.hpp  string_cast.hpp  transform.hpp  transform2.hpp  vector_angle.hpp  wrap.hpp
final/glm/simd/: geometric.h  matrix.h  platform.h
final/imgui_pack/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_opengl2.cpp  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_rectpack.h  imstb_truetype.h
(+83 files in other folders)
